--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         ftp-server: ftp://ftp.paulhibbitts.net/public_html/hibbittsdesign.org/test/docsify
-        ftp-username: paulhibbitts
+        ftp-username: paulhibb
         ftp-password: ${{ secrets.FTP_PASSWORD }}
